[package]
name = "triton-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "1.0"

[dev-dependencies.criterion]
version = "0.4.0"
features = ["html_reports"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false


[dependencies]
twenty-first = "0.21.1"
anyhow = "1.0"
itertools = "0.10.5"
num-traits = "0.2.15"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.1"
nom = "7.1"